force-app/main/default/objects/Price_Plan__c/Price_Plan__c.object-meta.xml
<CustomObject>
    <label>Price Plan</label>
    <nameField>
        <label>Price Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>