force-app/main/default/objects/Price_Plan__c/fields/Trial_Days__c.field-meta.xml
<CustomField>
    <fullName>Trial_Days__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Trial Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>