force-app/main/default/objects/Price_Plan__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description
  >Price per billing period (monthly, quarterly, annual)</description>
    <label>Unit Price</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>