force-app/main/default/objects/Price_Plan__c/validationRules/Non_Negative_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Negative_Price</fullName>
    <active>true</active>
    <errorConditionFormula>Unit_Price__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Unit_Price__c</errorDisplayField>
    <errorMessage>Unit Price must be greater than or equal to zero</errorMessage>
</ValidationRule>