force-app/main/default/objects/Price_Plan__c/validationRules/Valid_Trial_Days.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Trial_Days</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Trial_Days__c &lt; 0,
    Trial_Days__c &gt; 365
)</errorConditionFormula>
    <errorDisplayField>Trial_Days__c</errorDisplayField>
    <errorMessage>Trial Days must be between 0 and 365</errorMessage>
</ValidationRule>